--- a/development/assets/sass/blocks/general.sass
+++ b/development/assets/sass/blocks/general.sass
@@ -47,5 +47,17 @@
 		transform: scale(1.10)
 		&.active
 			transform: scale(1)
-
-
+.gEnvelope
+	position: fixed
+	bottom: 10px
+	right: 10px
+	width: 60px
+	height: 60px
+	background-color: black
+	display: flex
+	align-items: center
+	justify-content: center
+	color: white
+	border-radius: 50%
+	font-size: 20px
+	z-index: 1010
