--- a/development/assets/sass/blocks/home.sass
+++ b/development/assets/sass/blocks/home.sass
@@ -47,23 +47,29 @@
 	border: 1px solid #eaeaec
 	display: block
 	overflow: hidden
+	background: #f5f5f7
 	.swiper
 		box-sizing: border-box
 		position: relative
-		&:before
-			content: ""
-			background-color: black
-			z-index: 2
-			opacity: 0.1
-			position: absolute
-			left: 0px
-			top: 0px
-			width: 100%
-			height: 100%
-			pointer-events: none
-		.swiper-button-next,  .swiper-button-prev
-			color: white 
-			font-weight: 800
+		// &:before
+		// 	content: ""
+		// 	background-color: black
+		// 	z-index: 2
+		// 	opacity: 0.1
+		// 	position: absolute
+		// 	left: 0px
+		// 	top: 0px
+		// 	width: 100%
+		// 	height: 100%
+		// 	pointer-events: none
+		// .swiper-button-next,  .swiper-button-prev
+		// 	color: white 
+		// 	font-weight: 800
+		.swiper-pagination-bullet
+			width: 15px
+			height: 15px
+			&.swiper-pagination-bullet-active
+				background-color: black
 .b1ListMaster
 	display: grid
 	grid-template-columns: repeat(2, calc(50% - 10px))
@@ -120,6 +126,7 @@
 		color: #525252
 		line-height: 1.4
 		font-size: 19px
+		+fontg(15, 16)
 	// height: 100px
 	// display: flex
 	// align-items: center
